note style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <title>Note making</title>
 </head>
 
-<body style="background-color: #e7b3b3;">
+<body style="background: linear-gradient(to right, rgb(195, 20, 50), rgb(36, 11, 54));">
   <div id="root"></div>
 </body>
 
